# ml_capstone2024

./: .gitignore  Dockerfile  LICENSE  README.md  deployment.yaml  pyproject.toml  service.yaml
final_project/: notebook1.ipynb  notebook2.ipynb  notebook3.ipynb  predict.py  train.py
final_project/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
final_project/catboost_info/learn/: events.out.tfevents
final_project/models/: ridge_model_with_preprocessing.pkl
