[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Pablo Miranda <pgdemiranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
lightgbm = "^4.5.0"
tabulate = "^0.9.0"
llvmlite = "^0.43.0"
numba = "^0.60.0"
shap = "^0.46.0"
scikit-learn = "1.6.0"
torch = "^2.5.1"
catboost = "^1.2.7"
scikit-optimize = "^0.10.2"
fastapi = "^0.115.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"