[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Pablo Miranda <pgdemiranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
lightgbm = "^4.5.0"
scikit-learn = "1.6.0"
scikit-optimize = "^0.10.2"
fastapi = "^0.115.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"